changed subccription-lists request type
