# swagger/swagger.json
@@ -685,8 +685,8 @@
         }
       }
     },
-    "/fxn/subscription-list": {
-      "post": {
+    "/fxn/subscription-lists": {
+      "get": {
         "operationId": "SubscriptionLists",
         "responses": {
           "200": {
@@ -724,6 +724,14 @@
         "security": [],
         "parameters": [
           {
+            "in": "query",
+            "name": "dataProvider",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
             "description": "Provide an API key as a query parameter to call request on behalf of the user",
             "in": "query",
             "name": "apiKey",
@@ -732,17 +740,7 @@
               "type": "string"
             }
           }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "string"
-              }
-            }
-          }
-        }
+        ]
       }
     },
     "/fxn/realloc-subscription-list": {
